Created the server

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 </body>
 
 <script>
-  d3.json('http://localhost:3000/networkdata', function(data) {
+  d3.json('http://localhost:8000/networkdata', function(data) {
+          console.log(data);
+      });
+
+  d3.json('http://localhost:8000/networksize', function(data) {
+          console.log(data);
+      });
+
+  d3.json('http://localhost:8000/networksummary', function(data) {
           console.log(data);
       });
 </script>
