Encapsulated in dropdown and decade

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 
 <body>
   <h1> Hello World! </h1>
+  <select id="networkDropdown">
+      <option value="Movies" selected="selected">Movies</option>
+      <option value="Actors">Actors</option>
+      <option value="Studios">Studios</option>
+  </select>
   <svg id="network" width=500 height=500></svg>
 </body>
