Updated with back end data

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
   <h1> Hello World! </h1>
   <select id="networkDropdown">
-      <option value="Movies" selected="selected">Movies</option>
-      <option value="Actors">Actors</option>
-      <option value="Studios">Studios</option>
+      <option value="movie" selected="selected">Movies</option>
+      <option value="actor">Actors</option>
+      <option value="studio">Studios</option>
   </select>
   <svg id="network" width=500 height=500></svg>
 </body>
