--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="javascript/network.js " type="text/javascript"></script>
+<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+<script src="javascript/tSNE.js " type="text/javascript"></script>
+
 
 <head>
   <link rel="stylesheet" href="css/network.css">
