--- a/index.html
+++ b/index.html
@@ -1,21 +1,47 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
+
 <head>
+    <link rel="stylesheet" href="layout.css">
+    <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
 </head>
 
 <body>
-  <h1> Hello World! </h1>
+    <div id="container"> 
+        <div id="left">
+            <div id="year">
+                <span>1950</span>
+            </div>
+            <div id="narrative">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+            </div>
+        </div>
+        <div id="middle">
+                <img src="./nobackground.png" width="100%" >
+        </div>
+        <div id="right">
+            <h1>Top Keywords</h1>
+            <div id="keywords">
+                <ol> 
+                    <li>keyword one</li>
+                    <li>keyword two</li>
+                    <li>keyword three</li>
+                </ol>
+            </div>
+            <div id="buttons">
+                <button class="button-item">Next Decade</button>
+                <button class="button-item">Conclusion</button>
+            </div>
+        </div>
+    </div>
+    <div id="footer">
+        <div class="progress"></div>
+        <div class="progress"></div>
+        <div class="progress"></div>
+    </div>
 </body>
-
-<script>
-  d3.json('http://localhost:8000/networkdata', function(data) {
-          console.log(data);
-      });
-
-  d3.json('http://localhost:8000/networksize', function(data) {
-          console.log(data);
-      });
-
-  d3.json('http://localhost:8000/networksummary', function(data) {
-          console.log(data);
-      });
-</script>
