--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       <option value="1950" selected="selected">1950</option>
       <option value="1960">1960</option>
       <option value="1970">1970</option>
+      <option value="1980">1980</option>
+      <option value="1990">1990</option>
+      <option value="2000">2000</option>
+      <option value="2010">2010</option>
+      <option value="2020">2020</option>
   </select>
   <svg id="mainVis" width=600 height=650></svg>
 </body>
