--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 
 <head>
+    <link rel="stylesheet" href="intro.css">
     <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="conclusion.css">
     <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
