--- a/intro.html
+++ b/intro.html
@@ -1,5 +1,6 @@
 <head>
     <link rel="stylesheet" href="intro.css">
+    <link rel="stylesheet" href="layout.css">
     <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
