--- a/merge.html
+++ b/merge.html
@@ -1,4 +1,5 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="layout.js"></script>
 
 <head>
     <link rel="stylesheet" href="intro.css">
@@ -75,7 +76,7 @@
             </div>
             <div id="buttons">
                 <button class="button-item">Next Decade</button>
-                <button class="button-item">Conclusion</button>
+                <button class="button-item" onclick="goToConclusion()">Conclusion</button>
             </div>
         </div>
     </div>
