Deleted extra things, and moved to css and javascript folders

--- a/merge.html
+++ b/merge.html
@@ -1,10 +1,10 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="layout.js"></script>
+<script src="javascript/layout.js"></script>
 
 <head>
-    <link rel="stylesheet" href="intro.css">
-    <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="conclusion.css">
+    <link rel="stylesheet" href="css/intro.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/conclusion.css">
     <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
