--- a/merge.html
+++ b/merge.html
@@ -1,5 +1,6 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="javascript/layout.js"></script>
+<script src="javascript/tSNE.js " type="text/javascript"></script>
 
 <head>
     <link rel="stylesheet" href="css/intro.css">
@@ -50,7 +51,6 @@
             </div>
         </div>
         <div id="middle">
-                <img src="./nobackground.png" width="100%" >
         </div>
         <div id="right">
             <h1>Top Keywords</h1>
@@ -116,3 +116,14 @@
             </div>
       </div>
 </body>
+
+<script>
+    let dispatch = d3.dispatch('decade-update')
+  
+    // Build the DOM
+    buildTSNE(d3.select('#middle'))
+  
+    // Dispatch
+    dispatch.call('decade-update', this, 1950)
+  
+  </script>
