--- a/merge.html
+++ b/merge.html
@@ -1,10 +1,12 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="javascript/layout.js"></script>
+<script src="javascript/tSNE.js " type="text/javascript"></script>
 
 <head>
     <link rel="stylesheet" href="css/intro.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/conclusion.css">
+    <link rel="stylesheet" href="css/tSNE.css">
     <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -50,7 +52,7 @@
             </div>
         </div>
         <div id="middle">
-                <img src="./nobackground.png" width="100%" >
+            <svg id="mainVis" width="100%" height="100%"></svg>
         </div>
         <div id="right">
             <h1>Top Keywords</h1>
@@ -116,3 +118,14 @@
             </div>
       </div>
 </body>
+
+<script>
+    // Global
+    let dispatch = d3.dispatch('decade-update')
+
+    // Build the TSNE chart, nothing will draw until dispatch
+    buildTSNE(d3.select('#mainVis'))
+
+    // Initialize (for now, move to scrolly tell code later)
+    dispatch.call('decade-update', this, 1950)
+</script>
