--- a/merge.html
+++ b/merge.html
@@ -1,133 +1,150 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
 <script src="javascript/layout.js"></script>
 <script src="javascript/tSNE.js " type="text/javascript"></script>
+<script src="javascript/hexBin.js " type="text/javascript"></script>
 
 <head>
-    <link rel="stylesheet" href="css/intro.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/conclusion.css">
-    <link rel="stylesheet" href="css/tSNE.css">
-    <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
-
+  <link rel="stylesheet" href="css/intro.css">
+  <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="css/conclusion.css">
+  <link rel="stylesheet" href="css/tSNE.css">
+  <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
 </head>
 
 <body>
-
-<!-- Intro Begins -->
+  
+  <!-- Intro Begins -->
   <div id="intro_container"> 
-      <div id="intro">
-          <h1>Movie Night</h1>
-        <div id="intro_text">
-              <span>
-                In this visualization, we explore the ties of time with movie popularity and characteristics to find a relationship
-                between what makes a movie successful, and how our taste changes through time can influence the movies that are considered well-done. 
-                As we travel through each decade, play close attention to which movies are considered similar to each other, the top
-                three keywords for each decade, the top rated movies, and the way the clusters of data form. 
-                Enjoy the show!
-              </span>
+    <div id="intro">
+      <h1>Movie Night</h1>
+      <div id="intro_text">
+        <span>
+          In this visualization, we explore the ties of time with movie popularity and characteristics to find a relationship
+          between what makes a movie successful, and how our taste changes through time can influence the movies that are considered well-done. 
+          As we travel through each decade, play close attention to which movies are considered similar to each other, the top
+          three keywords for each decade, the top rated movies, and the way the clusters of data form. 
+          Enjoy the show!
+        </span>
+      </div>
+    </div>
+    <div id="start">
+      <div id="position_arrows">
+        <i class="left_down"></i>
+        <i class="right_down"></i>
+      </div>
+    </div> 
+  </div>
+  
+  <!-- Year Begins -->
+  <div id="year_container">
+    <div id="container"> 
+      <div id="left">
+        <div id="year">
+          <span>1950</span>
+        </div>
+        <div id="narrative">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
         </div>
       </div>
-      <div id="start">
-          <div id="position_arrows">
-          <i class="left_down"></i>
-          <i class="right_down"></i>
-          </div>
-      </div> 
-    </div>
-
-<!-- Year Begins -->
-    <div id="year_container">
-    <div id="container"> 
-        <div id="left">
-            <div id="year">
-                <span>1950</span>
-            </div>
-            <div id="narrative">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-            </div>
+      <div id="middle">
+        <svg id="mainVis" width="100%" height="100%"></svg>
+      </div>
+      <div id="right">
+        <h1>Top Keywords</h1>
+        <div id="keywords">
+          <ol> 
+            <li>keyword one</li>
+            <li>keyword two</li>
+            <li>keyword three</li>
+          </ol>
         </div>
-        <div id="middle">
-            <svg id="mainVis" width="100%" height="100%"></svg>
+        <div id="buttons">
+          <button class="button-item">Next Decade</button>
+          <button class="button-item" onclick="goToConclusion()">Conclusion</button>
         </div>
-        <div id="right">
-            <h1>Top Keywords</h1>
-            <div id="keywords">
-                <ol> 
-                    <li>keyword one</li>
-                    <li>keyword two</li>
-                    <li>keyword three</li>
-                </ol>
-            </div>
-            <div id="buttons">
-                <button class="button-item">Next Decade</button>
-                <button class="button-item" onclick="goToConclusion()">Conclusion</button>
-            </div>
-        </div>
+      </div>
     </div>
     <div id="footer">
-        <div class="progress"></div>
-        <div class="progress"></div>
-        <div class="progress"></div>
+      <div class="progress"></div>
+      <div class="progress"></div>
+      <div class="progress"></div>
     </div>
   </div>
-<!-- Conclusion begins -->
-    <div id="conclusion_container"> 
-        <div id="summary-text"> 
-          <h1>Conclusion</h1>
-          <Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.>
-        </div>
-          <div class="summary-container">
-              <div class="summary-item">1 
-                <div class="year">1950</div>
-              </div>
-              <div class="summary-item">2
-                  <div class="year">1960</div>
-              </div>
-              <div class="summary-item">3
-                  <div class="year">1970</div>
-              </div>
-              <div class="summary-item">4
-                  <div class="year">1980</div>
-              </div>
-              <div class="summary-item">5
-                  <div class="year">1990</div>
-              </div>
-              <div class="summary-item">6
-                  <div class="year">2000</div>
-              </div>
-              <div class="summary-item">7
-                  <div class="year">2010</div>
-              </div>
-              <div class="summary-item">8
-                  <div class="year">2020</div>
-              </div>
-            </div>
+  <!-- Conclusion begins -->
+  <div id="conclusion_container"> 
+    <div id="summary-text"> 
+      <h1>Conclusion</h1>
+      <Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.>
+    </div>
+    <div class="summary-container">
+      <div class="summary-item">
+        <svg id="summ-1950" width="100%" height="100%"></svg>
+        <div class="year">1950</div>
       </div>
+      <div class="summary-item">
+        <svg id="summ-1960" width="100%" height="100%"></svg>
+        <div class="year">1960</div>
+      </div>
+      <div class="summary-item">
+        <svg id="summ-1970" width="100%" height="100%"></svg>
+        <div class="year">1970</div>
+      </div>
+      <div class="summary-item">
+        <svg id="summ-1980" width="100%" height="100%"></svg>
+        <div class="year">1980</div>
+      </div>
+      <div class="summary-item">
+        <svg id="summ-1990" width="100%" height="100%"></svg>
+        <div class="year">1990</div>
+      </div>
+      <div class="summary-item">
+        <svg id="summ-2000" width="100%" height="100%"></svg>
+        <div class="year">2000</div>
+      </div>
+      <div class="summary-item">
+        <svg id="summ-2010" width="100%" height="100%"></svg>
+        <div class="year">2010</div>
+      </div>
+      <div class="summary-item">
+        <svg id="summ-2020" width="100%" height="100%"></svg>
+        <div class="year">2020</div>
+      </div>
+    </div>
+  </div>
 </body>
 
 <script>
-    // Global
-    let dispatch = d3.dispatch('decade-update', 'point-to')
-
-    // Build the TSNE chart, nothing will draw until dispatch
-    buildTSNE(d3.select('#mainVis'))
-
-    // Initialize (for now, move to scrolly tell code later)
-    dispatch.call('decade-update', this, 1950)
-    dispatch.call('point-to', this, [{x: 100, y: 100, r: 20}])
+  // Global
+  let dispatch = d3.dispatch('decade-update', 'point-to')
+  
+  // Build the TSNE chart, nothing will draw until dispatch
+  buildTSNE(d3.select('#mainVis'))
+  
+  // Initialize (for now, move to scrolly tell code later)
+  dispatch.call('decade-update', this, 1950)
+  dispatch.call('point-to', this, [{x: 100, y: 100, r: 20}])
+  
+  // Build conclusions
+  let bins = [1950,1960,1970,1980,1990,2000,2010,2020]
+  let queue = bins.reduce((acc, b) => acc.defer(d3.json, `http://localhost:8000/tSNE/${b}/coords`), d3.queue())
+  queue.awaitAll(function(err, responses){
+    if(err) { console.error(err); return }
+    responses.map((d,i) => { buildHex(d3.select(`#summ-${bins[i]}`), d) })
+  })
 </script>
