--- a/index.html
+++ b/index.html
@@ -1,43 +1,164 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-<script src="javascript/tSNE.js " type="text/javascript"></script>
 <script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
+<script src="javascript/layout.js"></script>
+<script src="javascript/tSNE.js " type="text/javascript"></script>
 <script src="javascript/hexBin.js " type="text/javascript"></script>
+<script src="deps/graph-scroll/graph-scroll.js " type="text/javascript"></script>
 
 <head>
+  <link rel="stylesheet" href="css/intro.css">
+  <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="css/conclusion.css">
   <link rel="stylesheet" href="css/tSNE.css">
+  <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
 </head>
 
 <body>
-  <select id="decadeDropdown">
-      <option value="1950" selected="selected">1950</option>
-      <option value="1960">1960</option>
-      <option value="1970">1970</option>
-      <option value="1980">1980</option>
-      <option value="1990">1990</option>
-      <option value="2000">2000</option>
-      <option value="2010">2010</option>
-      <option value="2020">2020</option>
-  </select>
-  <svg id="mainVis" width=600 height=650></svg>
+  
+  <!-- Intro Begins -->
+  <div id="intro_container"> 
+    <div id="intro">
+      <h1>Movie Night</h1>
+      <div id="intro_text">
+        <span>
+          In this visualization, we explore the ties of time with movie popularity and characteristics to find a relationship
+          between what makes a movie successful, and how our taste changes through time can influence the movies that are considered well-done. 
+          As we travel through each decade, play close attention to which movies are considered similar to each other, the top
+          three keywords for each decade, the top rated movies, and the way the clusters of data form. 
+          Enjoy the show!
+        </span>
+      </div>
+    </div>
+    <div id="start">
+      <div id="position_arrows">
+        <i class="left_down"></i>
+        <i class="right_down"></i>
+      </div>
+    </div> 
+  </div>
+
+  <!-- Year Overlay -->
+  <div id="container">
+    <div id="year_container">
+      <div id="top"> 
+        <div id="left">
+          <div id="year">
+            <span>1950</span>
+          </div>
+        </div>
+        <div id="middle">
+          <svg id="mainVis" width="100%" height="100%"></svg>
+        </div>
+        <div id="right">
+          <h1>Top Keywords</h1>
+          <div id="keywords">
+            <ol> 
+              <li>keyword one</li>
+              <li>keyword two</li>
+              <li>keyword three</li>
+            </ol>
+          </div>
+          <div id="buttons">
+            <button class="button-item">Next Decade</button>
+            <button class="button-item" onclick="goToConclusion()">Conclusion</button>
+          </div>
+        </div>
+      </div>
+      <div id="footer">
+        <div class="progress"></div>
+        <div class="progress"></div>
+        <div class="progress"></div>
+      </div>
+    </div>
+    <!-- Wall of Text (no, literally...) -->
+    <div id="narration">
+      <div class="statement">
+        This is an awesome statement about why the world should look into being better people. Did you know most people are not better people? I know better people.
+      </div>
+      <div class="statement">
+          STAHP. Wait a minute ;)
+      </div>
+    </div>
+  </div>
+
+  <!-- Conclusion begins -->
+  <div id="conclusion_container"> 
+    <div id="summary-text"> 
+      <h1>Conclusion</h1>
+      <Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.>
+    </div>
+    <div class="summary-container">
+      <div class="summary-item">
+        <svg id="summ-1950" width="100%" height="100%"></svg>
+        <div class="year">1950</div>
+      </div>
+      <div class="summary-item">
+        <svg id="summ-1960" width="100%" height="100%"></svg>
+        <div class="year">1960</div>
+      </div>
+      <div class="summary-item">
+        <svg id="summ-1970" width="100%" height="100%"></svg>
+        <div class="year">1970</div>
+      </div>
+      <div class="summary-item">
+        <svg id="summ-1980" width="100%" height="100%"></svg>
+        <div class="year">1980</div>
+      </div>
+      <div class="summary-item">
+        <svg id="summ-1990" width="100%" height="100%"></svg>
+        <div class="year">1990</div>
+      </div>
+      <div class="summary-item">
+        <svg id="summ-2000" width="100%" height="100%"></svg>
+        <div class="year">2000</div>
+      </div>
+      <div class="summary-item">
+        <svg id="summ-2010" width="100%" height="100%"></svg>
+        <div class="year">2010</div>
+      </div>
+      <div class="summary-item">
+        <svg id="summ-2020" width="100%" height="100%"></svg>
+        <div class="year">2020</div>
+      </div>
+    </div>
+  </div>
 </body>
 
 <script>
+  // Global
   let dispatch = d3.dispatch('decade-update', 'point-to')
 
-  // Build the DOM
-  let selected = () => document.getElementById("decadeDropdown").value;
-  d3.json(`http://localhost:8000/tSNE/${selected()}/coords`, (err, data) => {
-    if(err) { console.error(err); return }
-    buildHex(d3.select('#mainVis'), data)
-  })
+  // Prep the scrolly
+  d3.graphScroll()
+    .graph(d3.select('#year_container'))
+    .container(d3.select('#container'))
+    .sections(d3.selectAll('.statement'))
+    .on('active', function(i){ console.log(i + 'th section active') })
 
-  // Listen for changes to selection
-  d3.select('#decadeDropdown')
-    .on("change", function () {
-      d3.json(`http://localhost:8000/tSNE/${selected()}/coords`, (err, data) => {
-        if(err) return
-        buildHex(d3.select('#mainVis'), data)
-      })
-    });
+  // Build the TSNE chart, nothing will draw until dispatch
+  buildTSNE(d3.select('#mainVis'))
+  
+  // Initialize (for now, move to scrolly tell code later)
+  dispatch.call('decade-update', this, 1950)
+  dispatch.call('point-to', this, [{x: 100, y: 100, r: 20}])
+  
+  // Build conclusions
+  let bins = [1950,1960,1970,1980,1990,2000,2010,2020]
+  let queue = bins.reduce((acc, b) => acc.defer(d3.json, `http://localhost:8000/tSNE/${b}/coords`), d3.queue())
+  queue.awaitAll(function(err, responses){
+    if(err) { console.error(err); return }
+    responses.map((d,i) => { buildHex(d3.select(`#summ-${bins[i]}`), d) })
+  })
 </script>
