--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </ol>
           </div>
           <div id="buttons">
-            <button class="button-item">Next Decade</button>
+            <button class="button-item" id="next_decade">Next Decade</button>
             <button class="button-item" onclick="goToConclusion()">Conclusion</button>
           </div>
         </div>
@@ -74,7 +74,7 @@
     <!-- Wall of Text (no, literally...) -->
     <div id="narration">
       <div class="statement"></div>
-      <div class="statement">
+      <div class="statement" id="graph1950">
         This is an awesome statement about why the world should look into being better people. Did you know most people are not better people? I know better people.
       </div>
       <div class="statement">
@@ -83,38 +83,69 @@
       <div class="statement">
           meow. Wait a minute ;)
       </div>
-      <div class="statement">
+      <div class="statement" id="graph1960">
         a
       </div>
       <div class="statement">
         b
       </div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      <div class="statement"></div>
-      
+      <div class="statement">
+        c
+      </div>
+      <div class="statement" id="graph1970">
+        d
+      </div>
+      <div class="statement">
+        e
+      </div>
+      <div class="statement">
+        f
+      </div>
+      <div class="statement" id="graph1980">
+        e
+      </div>
+      <div class="statement">
+        f
+      </div>
+      <div class="statement">
+        g
+      </div>
+      <div class="statement" id="graph1990">
+        h
+      </div>
+      <div class="statement">
+        i
+      </div>
+      <div class="statement">
+        j
+      </div>
+      <div class="statement" id="graph2000">
+        k
+      </div>
+      <div class="statement">
+        l
+      </div>
+      <div class="statement">
+        m
+      </div>
+      <div class="statement" id="graph2010">
+        n
+      </div>
+      <div class="statement">
+        n
+      </div>
+      <div class="statement">
+        o
+      </div>
+      <div class="statement" id="graph2020">
+        p
+      </div>
+      <div class="statement">
+        q
+      </div>
+      <div class="statement">
+          q
+      </div>
     </div>
   </div>
 
@@ -180,14 +211,18 @@
     .container(d3.select('#container'))
     .sections(d3.selectAll('.statement'))
     .on('active', function(i) { 
-      if(i == 1 || i > 1 && i%4 == 0){
-        let year = 1950;
-        if(i > 1) {
-          console.log()
-          year += i/4 * 10
+      console.log('observing' + i)
+      if(i == 1 || i > 1 && (i-1)%3 == 0){
+        let decade = 1950;
+          if(i > 1) {
+            decade += (i-1)/3 * 10
+          }
+          //add listener to button depending on decade
+          document.getElementById("next_decade").removeEventListener("click", fastForwardDecade);
+            document.getElementById("next_decade").addEventListener("click", () => fastForwardDecade(decade));
+
+          dispatch.call('decade-update', this, decade)
         }
-        dispatch.call('decade-update', this, year)
-      }
 
       if(i === 3){
         dispatch.call('point-to', this, [{x: 100, y: 100, r: 20}])
@@ -209,4 +244,13 @@
     if(err) { console.error(err); return }
     responses.map((d,i) => { buildHex(d3.select(`#summ-${bins[i]}`), d) })
   })
+
+  function fastForwardDecade(decade) {
+     //if decade 2020, make sure to return to the final container
+    decade = decade == 2020 ? 'conclusion_container' : 'graph' + (decade+10);
+    console.log(document.querySelector('#' + decade), 'query');
+    document.querySelector('#' + decade).scrollIntoView({ 
+      behavior: 'smooth' 
+    });
+  }
 </script>
