--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <div id="conclusion_container"> 
     <div id="summary-text"> 
       <h1>Conclusion</h1>
-      <Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
       Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
@@ -162,7 +162,7 @@
       Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
       Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.>
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </div>
     <div class="summary-container">
       <div class="summary-item" onclick="returnToDecade(1950)">
@@ -211,6 +211,8 @@
     .container(d3.select('#container'))
     .sections(d3.selectAll('.statement'))
     .on('active', function(i) { 
+
+      // Update charts
       if(i == 1 || i > 1 && (i-1)%3 == 0){
         let decade = 1950;
           if(i > 1) {
@@ -222,6 +224,7 @@
           dispatch.call('decade-update', this, decade)
         }
 
+      // Dispatch pointer events
       if(i === 3){
         dispatch.call('point-to', this, [{x: 100, y: 100, r: 20}])
       }
@@ -238,6 +241,7 @@
     responses.map((d,i) => { buildHex(d3.select(`#summ-${bins[i]}`), d) })
   })
 
+  // Will jump forward to the given decade when triggered.
   function fastForwardDecade(decade) {
     decade = decade == 2020 ? 'conclusion_container' : 'graph' + (decade+10);
     document.querySelector('#' + decade).scrollIntoView({ 
@@ -245,6 +249,7 @@
     });
   }
 
+  // Will return to a decade earlier on the page when triggered
   function returnToDecade(decade){
     document.querySelector('#graph' + decade).scrollIntoView({ 
       behavior: 'smooth' 
