Set domain for gh-pages.

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 <script>
   // Globals
   let SCROLLINGTO = null;
-  let DOMAIN = 'http://localhost:8000/'
+  let DOMAIN = ''//'http://localhost:8000/'
   let dispatch = d3.dispatch('decade-update', 'point-to', 'stop-force', 'filter')
 
   // Keywords list:
