Added themes to the DOM

--- a/index.html
+++ b/index.html
@@ -70,36 +70,81 @@
     </div>
     <!-- Wall of Text (no, literally...) -->
     <div id="narration">
-      <div class="statement"></div>
+      <div class="statement">
+        <p>
+            Let’s orient you to the visualization. The current years of movies you are looking at appears right above this narration 
+            (a ‘bin’). As you scroll the page, the bin will change and we’ll talk a little bit about what’s going on right here.
+             You can monitor your progress through the current bin with the progress bar at the bottom.
+            On the far right is a running list of top keywords movies had within the bins up to and including
+             the currently viewed one - this can help you get a sense of how themes change with time. 
+             If you wish to quickly advance, there’s also some convenience buttons at the bottom. Finally,
+              use the search box to help you find specific keywords, studios, movies, directors, or actors on the soon-to-be-displayed chart.            
+        </p>
+      </div>
       <div class="statement" id="graph1950">
-        This is an awesome statement about why the world should look into being better people. Did you know most people are not better people? I know better people.
+        <p> In the center of the page is a visualization made with t-SNE clustering. t-SNE (t-Distributed Stochastic Neighbor Embedding)
+         is an algorithm used to reduce dimensionality in a  high-dimensional dataset. T-SNE allows us to create this three dimensional
+         visualization form a multi-dimensional dataset.
+        </p>
+        <p>Each bubble in the visualization represents a movie that was released in the current decade. N features were extracted from these movies (ie. Director, genera, and runtime) and these features were used by t-SNE to cluster similar movies together.
+           Our visualization is a three dimensional t-SNE, the first two dimensions being X and Y locations and the third color. 
+        </p>
       </div>
       <div class="statement">
-          STAHP. Wait a minute ;)
+         <p>
+            If you hover over a movie you can view information about the movie including it’s title,
+             genera, and runtime. As you hover over the visualization you can begin to use the tooltips and
+            keywords to notice patterns among the clusters and similarities among the movies, you may even find some Disney movies in the mix.
+         </p>
+         <p>
+            The Horse in Motion was created in 1878 this was a motion photography created by taking a bunch of simultaneous pictures. Roundhay Garden Scene was then created in 1888 this was only 2.1 seconds long but is still classified as a movie. The third movie ever created was Arrival of a Train in 1895 this movie shows a train being pulled into a station. 
+            If you type “Arrival” you will be able to find where this movie is located in the visualization.
+            <!-- Potentially do the search for them -->
+         </p>
       </div>
       <div class="statement">
-          meow. Wait a minute ;)
+        <p>
+            In the beginning movies were only black and white and primarily silent films. 
+            Before there was sound in films musicians sat below the screen and would play music along with the movie.
+            The first move with sound was the The Jazz Singer made in 1927. While some movies before 1950 had sound it was 
+            not popular until the 50s. Search “silent film” while in this decade and then again when you move onto the 50s and see how movies changed.
+        </p>
       </div>
       <div class="statement" id="graph1960">
-        a
+        <p>
+          t-SNE has clustered the data on three axis X, Y and Z. The X and Y axis appear as they would on a normal
+           graph but the Z axis is represented by the color. The Z axis is portrayed by color in order to make a 3 
+           dimensional graph a 2 dimensional graph, you can picture for example that in a 3D graph all of the green points
+            would be in the same spot on the Z axis.
+          </p>
       </div>
       <div class="statement">
-        b
+        <p>
+          World War (Closing of World War II)
+        </p>
       </div>
       <div class="statement">
         c
       </div>
       <div class="statement" id="graph1970">
-        d
+        <p>
+          Because this visualization is a 3D graph flattened into a 2D graph the physical distance between movies does not indicate anything 
+          about the two movies. Just because the two highlighted clusters of movies are on opposite sides of the visualization does not mean 
+          these two clusters are that they are extremely different from each other.
+        </p>
       </div>
       <div class="statement">
-        e
+        <p>
+            Spaghetti Western
+        </p>
       </div>
       <div class="statement">
         f
       </div>
       <div class="statement" id="graph1980">
-        e
+        <p>
+          Cluster of locations (the ones with Star Wars)
+        </p>
       </div>
       <div class="statement">
         f
@@ -108,7 +153,9 @@
         g
       </div>
       <div class="statement" id="graph1990">
-        h
+        <p>
+          Space and Cold War
+        </p>
       </div>
       <div class="statement">
         i
@@ -117,7 +164,10 @@
         j
       </div>
       <div class="statement" id="graph2000">
-        k
+        <p>
+          Size affected by Rating Cluster of popular Upper Right green thingy
+          (pointer thingy here)
+        </p>
       </div>
       <div class="statement">
         l
@@ -126,7 +176,9 @@
         m
       </div>
       <div class="statement" id="graph2010">
-        n
+        <p>
+          Harry Potter Life
+        </p>
       </div>
       <div class="statement">
         n
@@ -135,7 +187,9 @@
         o
       </div>
       <div class="statement" id="graph2020">
-        p
+        <p>
+          Hero ~ increase in special effects?
+        </p>
       </div>
       <div class="statement">
         q
