--- a/index.html
+++ b/index.html
@@ -135,11 +135,20 @@
       </div>
       <div class="statement">
         <p>
-            Spaghetti Western
+            Spaghetti Western, also known as Italian Western or Macaroni Western
+            are western movie that emerged in the mid of the 1960's due to Sergio Leone's
+            success in the film industry. As seen in the top keywords, it's the top
+            keyword for this year. 
         </p>
       </div>
       <div class="statement">
-        f
+        <p>
+          However, after performing a search on the term, you can observe that most of
+          them did not have good rankings or seem to cluster together. 
+          These movies tended to have a style that allowed for low budgets in Europe
+          and American Genre's were rapidly changing. The Western started evolving from 
+          here until a rougher form, and some critics believe Sergio Leone influenced it.
+        </p>
       </div>
       <div class="statement" id="graph1980">
         <p>
