--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           However, after performing a search on the term, you can observe that most of
           them did not have good rankings or seem to cluster together. 
           These movies tended to have a style that allowed for low budgets in Europe
-          and American Genre's were rapidly changing. The Western started evolving from 
+          and American Genres were rapidly changing. The Western started evolving from 
           here until a rougher form, and some critics believe Sergio Leone influenced it.
         </p>
       </div>
@@ -186,14 +186,27 @@
       </div>
       <div class="statement" id="graph2010">
         <p>
-          Harry Potter Life
+          In the 2000's, one of the most influencial series of this generation was introduced as a movie.
+          Harry Potter is a series of fantasy novels that began as a novel
+          published in 1997. Warner Bro's produced the first Harry Potter movie in November 2001.  
         </p>
       </div>
       <div class="statement">
-        n
+        <p>
+          As you notice when you search "Harry Potter", you can see that four of the Harry Potter
+          movies were clusterd together: Harry Potter and the Sorcerer's Stone, The Prisioner of Azkaban,
+          The Chamber of Secrets, and The Goblet of Fire. On the other cluster, is the Half-Blood Prince
+          the Order of the Phoenix.
+        </p>
       </div>
       <div class="statement">
-        o
+        <p>
+         This powerful novel created not only an escape of reality to a magical world, but created
+         a movement filled with fans. The success of the novels led to a website called
+         Pottermore being created in which you can find yourself in a journey
+         through the story with more access that was not revealed in the books and
+         allowing fans to be in a wizardry land.
+        </p>
       </div>
       <div class="statement" id="graph2020">
         <p>
